--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,18 @@
+:root {
+  --orange: #a74f08;
+  --sunset-yellow: #ffcc00;
+  --white: #fff;
+  --black: #000;
+  --blue: blue;
+}
 * {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
 }
 /* Navbar styling */
 .navbar {
-  background: #fff;
-  height: 90px;
+  background: var(--white);
+  height: 95px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +25,7 @@
 }
 
 .scrollNav {
-  background: #fff; /* Change the background color on scroll */
+  background: var(--white); /* Change the background color on scroll */
 }
 
 /* Container for navbar */
@@ -52,7 +59,7 @@
 .menu-icon div {
   width: 25px;
   height: 3px;
-  background-color: #000;
+  background-color: var(--black);
   margin: 5px;
   transition: all 0.3s ease;
 }
@@ -84,7 +91,7 @@
 }
 
 .nav-links {
-  color: #000;
+  color: var(--black);
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -95,22 +102,109 @@
 
 /* Active link styling */
 .nav-item.active .nav-links {
-  color: orange;
-  background-color: var(--orange);
-  padding: 30px;
-  border: 1px solid var(--orange);
-  border-radius: 5px;
+  color: var(--orange);
 }
 
 .nav-links:hover {
-  color: blue;
+  color: var(--blue);
 }
 
 /* Hamburger menu for smaller screens */
 .active {
   transform: translateX(0);
 }
+@media screen and (max-width: 1240px) {
+  .navbar {
+    height: 90px;
+  }
+  .menu-icon {
+    display: block;
+    padding-top: 30px;
+  }
 
+  .nav-menu {
+    display: none;
+    flex-direction: column;
+    width: 90%;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-item {
+    width: 90%;
+    height: 80px;
+  }
+
+  .active {
+    left: 0;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .navbar {
+    height: 120px;
+  }
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 25px;
+    right: 20px;
+    z-index: 999;
+  }
+
+  .nav-menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100vh;
+    width: 50%;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+  }
+
+  .active .nav-menu {
+    right: 0;
+  }
+
+  .nav-item {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+  }
+
+  .nav-links {
+    text-decoration: none;
+    color: var(--black);
+    padding: 20px 0;
+    display: block;
+    width: 100%;
+    transition: all 0.3s ease;
+  }
+
+  .nav-links:hover {
+    background-color: #f0f0f0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 1.5rem;
+    color: var(--black);
+    text-decoration: none;
+    z-index: 999;
+  }
+  .navbar-logo img {
+    width: 100%;
+    height: 90px;
+  }
+}
 @media screen and (max-width: 1024px) {
   .navbar {
     height: 90px;
@@ -149,8 +243,8 @@
   .menu-icon {
     display: block;
     position: absolute;
+    padding-top: 3px;
     right: 20px;
-    padding-top: 30px;
     z-index: 999;
   }
 
@@ -160,7 +254,7 @@
     right: -100%;
     height: 100vh;
     width: 70%;
-    background-color: #fff;
+    background-color: var(--white);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -180,7 +274,7 @@
 
   .nav-links {
     text-decoration: none;
-    color: #000;
+    color: var(--black);
     padding: 20px 0;
     display: block;
     width: 100%;
@@ -196,7 +290,7 @@
     top: 20px;
     left: 20px;
     font-size: 1.5rem;
-    color: #000;
+    color: var(--black);
     text-decoration: none;
     z-index: 999;
   }
@@ -214,7 +308,7 @@
   .menu-icon {
     display: block;
     position: absolute;
-    top: 55px;
+    top: 25px;
     right: 20px;
     z-index: 999;
   }
@@ -225,7 +319,7 @@
     right: -100%;
     height: 100vh;
     width: 70%;
-    background-color: #fff;
+    background-color: var(--white);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -245,7 +339,7 @@
 
   .nav-links {
     text-decoration: none;
-    color: #000;
+    color: var(--black);
     padding: 20px 0;
     display: block;
     width: 100%;
@@ -261,7 +355,7 @@
     top: 20px;
     left: 20px;
     font-size: 1.5rem;
-    color: #000;
+    color: var(--black);
     text-decoration: none;
     z-index: 999;
   }
@@ -301,17 +395,12 @@
   }
 }
 
-/* Navbar.css */
-
-/* ... [Previous styles] ... */
-
 /* Hamburger menu styles for Apple Watch screen */
 @media screen and (max-width: 394px) {
   .navbar {
     height: 95px;
   }
   .menu-icon {
-    top: 10px;
     right: 10px;
   }
 
