--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -123,6 +123,10 @@
 }
 
 @media (max-width: 1024px) {
+  .sermon {
+    top: 30%;
+  }
+
   .watch-button {
     width: 200px;
     height: 50px;
@@ -149,7 +153,7 @@
   }
 
   .watch-button {
-    width: 150px;
+    width: 200px;
     height: 40px;
     border-radius: 8px;
   }
@@ -167,10 +171,20 @@
     word-spacing: 3px;
   }
 
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+  }
+
   .container .about-church {
-    font-size: 14px;
-    line-height: 18px;
-    max-width: 100%;
+    font-size: 16px;
+    line-height: 20px;
+    max-width: 438px;
+    margin-bottom: 20px;
   }
 
   .quick-links {
