--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -20,7 +20,6 @@
 }
 .sermon {
   line-height: 65px;
-  /* background-color: var(--black); */
   text-align: center;
   position: absolute;
   top: 70%;
@@ -44,6 +43,7 @@
   cursor: pointer;
 }
 .watch-button:hover {
+  border: 2px solid var(--white);
   background: transparent;
 }
 .watch-button .watch-content {
@@ -88,10 +88,10 @@
 }
 .container .about-church {
   font-size: 20px;
-  font-weight: 400;
-  line-height: 25px;
-  width: 600px;
-  word-spacing: 4px;
+  line-height: 30px;
+  max-width: 800px;
+  word-spacing: 2px;
+  margin-bottom: 20px;
 }
 .quick-links {
   padding-top: 20px;
@@ -102,8 +102,7 @@
 .about-btn {
   color: white;
   background-color: var(--orange);
-  padding: 15px;
-  width: 160px;
+  width: 200px;
   border: 1px solid var(--orange);
   border-radius: 5px;
   cursor: pointer;
@@ -112,13 +111,13 @@
 .branch-btn {
   color: white;
   background-color: var(--orange);
-  padding: 16px;
   border: 1px solid var(--orange);
   border-radius: 5px;
   cursor: pointer;
   width: 200px;
 }
 .btn:hover {
+  border: 2px solid var(--white);
   background: transparent;
 }
 
@@ -153,8 +152,8 @@
   }
 
   .watch-button {
-    width: 200px;
-    height: 40px;
+    width: 250px;
+    height: 70px;
     border-radius: 8px;
   }
 
@@ -171,7 +170,6 @@
     word-spacing: 3px;
   }
 
-
   .container {
     display: flex;
     justify-content: center;
@@ -181,9 +179,10 @@
   }
 
   .container .about-church {
-    font-size: 16px;
-    line-height: 20px;
-    max-width: 438px;
+    font-size: 18px;
+    line-height: 25px;
+    max-width: 490px;
+    word-spacing: 4px;
     margin-bottom: 20px;
   }
 
@@ -194,7 +193,7 @@
   .about-btn,
   .house-btn,
   .branch-btn {
-    padding: 10px;
-    width: 120px;
+    padding: 15px;
+    width: 180px;
   }
 }
