--- a/src/components/Home/quicklink.css
+++ b/src/components/Home/quicklink.css
@@ -2,7 +2,7 @@
   --orange: #a74f08;
   --white: white;
 }
-.quick-link {
+/*.quick-link {
   display: flex;
 }
 .quick-link .content .text {
@@ -10,7 +10,7 @@
   display: block;
   text-align: center;
   position: absolute;
-}
+} */
 
 /* .image{
     height: 100%;
@@ -20,7 +20,7 @@
     position: absolute;
 } */
 
-.quick-link .content .text .pray-btn {
+/* .quick-link .content .text .pray-btn {
   width: 150px;
   height: 50px;
   border: 2px solid var(--orange);
@@ -33,4 +33,67 @@
 .quick-link .content .text .pray-btn:hover {
   background: transparent;
   border: 2px solid var(--white);
+} */
+/* quicklink.css */
+
+.third-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+}
+
+.quick-link {
+  display: flex;
+}
+
+.content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.image {
+  position: relative;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 1;
+}
+
+.text p {
+  margin-bottom: 8px;
+}
+
+.text h2 {
+  margin-bottom: 16px;
+}
+
+.pray-btn {
+  padding: 10px 20px;
+  background-color: var(--orange);
+  color: var(--white);
+  border: 1px solid var(--orange);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 12px;
+}
+
+.pray-btn:hover {
+  background-color: transparent;
+  border: 1px solid var(--white);
 }
