--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,19 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .bannerImage {
   width: 100%;
+  height: auto;
+  display: block;
+  padding-top: 75px;
 }
-.heading {
-  padding-top: 30px;
+.abt-msg {
+  line-height: 30px;
   text-align: center;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
-
-.about {
-  padding-top: 30px;
-  display: flex;
-  gap: 2rem;
+.abt-msg h1 {
+  font-size: 40px;
 }
-.daddyPic {
-  width: 90vh;
+.abt-msg p {
+  font-size: 20px;
+  padding: 15px;
+  font-weight: bold;
 }
-.about-text {
-  width: 50%;
+.abt-writeup h1 {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
 }
