--- a/src/components/Home/quicklink.css
+++ b/src/components/Home/quicklink.css
@@ -2,6 +2,11 @@
   --orange: #a74f08;
   --white: white;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /*.quick-link {
   display: flex;
 }
@@ -81,16 +86,20 @@
 
 .text h2 {
   margin-bottom: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
 }
 
 .pray-btn {
   padding: 10px 20px;
-  background-color: var(--orange);
+  background-color: transparent;
   color: var(--white);
   border: 1px solid var(--orange);
   cursor: pointer;
   transition: background-color 0.3s ease;
   border-radius: 12px;
+  width: 150px;
+  background-image: linear-gradient(180deg, #E46B0A 0%, #A9510A 100%);
 }
 
 .pray-btn:hover {
