--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,8 +6,8 @@
   --blue: blue;
 }
 * {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  margin: 0;
+  padding: 0;
 }
 /* Navbar styling */
 .navbar {
@@ -98,6 +98,8 @@
   padding: 0 1rem;
   height: 100%;
   cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
 }
 
 /* Active link styling */
