--- a/src/components/Home/quicklink.css
+++ b/src/components/Home/quicklink.css
@@ -6,41 +6,6 @@
   margin: 0;
   padding: 0;
 }
-
-/*.quick-link {
-  display: flex;
-}
-.quick-link .content .text {
-  text-align: center;
-  display: block;
-  text-align: center;
-  position: absolute;
-} */
-
-/* .image{
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-} */
-
-/* .quick-link .content .text .pray-btn {
-  width: 150px;
-  height: 50px;
-  border: 2px solid var(--orange);
-  border-radius: 12px;
-  background-color: var(--orange);
-  cursor: pointer;
-  color: white;
-  position: relative;
-}
-.quick-link .content .text .pray-btn:hover {
-  background: transparent;
-  border: 2px solid var(--white);
-} */
-/* quicklink.css */
-
 .third-section {
   display: flex;
   justify-content: center;
@@ -82,15 +47,17 @@
 
 .text p {
   margin-bottom: 8px;
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
 }
 
 .text h2 {
   margin-bottom: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
+  font-family: "Poppins", sans-serif;
+  font-size: 35px;
 }
 
-.pray-btn {
+.link-btn {
   padding: 10px 20px;
   background-color: transparent;
   color: var(--white);
@@ -98,11 +65,38 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   border-radius: 12px;
-  width: 150px;
-  background-image: linear-gradient(180deg, #E46B0A 0%, #A9510A 100%);
+  width: 180px;
+  background-image: linear-gradient(180deg, #e46b0a 0%, var(--orange) 100%);
+  /* background-image: linear-gradient(180deg, #e46b0a 0%, #a9510a 100%); */
 }
 
-.pray-btn:hover {
-  background-color: transparent;
+.link-btn:hover {
+  background: transparent;
   border: 1px solid var(--white);
+}
+
+@media (max-width: 1024px) {
+  .image {
+    max-width: 100%;
+  }
+
+  .image img {
+    width: 150%;
+    height: 50vh;
+  }
+}
+@media (max-width: 768px) {
+  .image {
+    max-width: 100%;
+  }
+
+  .image img {
+    width: 150%;
+    height: 60vh;
+  }
+}
+@media (max-width: 468px) {
+  .quick-link {
+    display: grid;
+  }
 }
