--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -5,9 +5,9 @@
   margin: 0;
   padding: 0;
 }
-.bannerImage {
+.banner {
   width: 100%;
-  height: auto;
+  height: 230vh;
   display: block;
   padding-top: 75px;
 }
