--- a/src/components/Home/quicklink.css
+++ b/src/components/Home/quicklink.css
@@ -33,7 +33,7 @@
 
 .image img {
   width: 100%;
-  height: auto;
+  height: 110vh;
 }
 
 .text {
@@ -66,6 +66,7 @@
   transition: background-color 0.3s ease;
   border-radius: 12px;
   width: 180px;
+  height: 50px;
   background-image: linear-gradient(180deg, #e46b0a 0%, var(--orange) 100%);
   /* background-image: linear-gradient(180deg, #e46b0a 0%, #a9510a 100%); */
 }
